# aarch64-os

./: .gitignore  CMakeLists.txt  CmakeLists.txt  linker.ld
scripts/: bt.py  build.py  run.py
src/: boot.s  fs.c  fs.h  graphics.h  kernel.c  serial.c  serial.h
src/boot/: main.s
src/core/: alloc.c  alloc.h  arg.h  fmt.c  fmt.h  mem.h  types.h
src/kernel/: graphics.h  main.c  serial.h
src/kernel/core/: fmt.c  types.h
tools/: 13.3.rel1-mingw-w64-i686-aarch64-none-elf-manifest.txt
tools/aarch64-none-elf/include/: _newlib_version.h  dirent.h  langinfo.h  locale.h  math.h  newlib.h  stdatomic.h  stdlib.h  time.h
tools/aarch64-none-elf/include/machine/: _fpmath.h  _types.h  fenv-fp.h  ieeefp.h  setjmp.h
tools/aarch64-none-elf/include/ssp/: ssp.h  string.h  strings.h
tools/aarch64-none-elf/include/sys/: _default_fcntl.h  cdefs.h  config.h  endian.h  errno.h  fcntl.h  features.h  fenv.h  reent.h  sched.h  select.h  signal.h  stat.h  unistd.h
tools/aarch64-none-elf/lib/: aem-validation.specs
tools/aarch64-none-elf/lib/ilp32/: aem-v8-r.specs
tools/aarch64-none-elf/lib/ldscripts/: aarch64elf.xbn  aarch64elf.xc  aarch64elf.xce  aarch64elf.xdce  aarch64elf.xdw  aarch64elf.xe  aarch64elf.xn  aarch64elf.xs  aarch64elf.xsc  aarch64elf.xse  (+137 more)
tools/share/doc/: as.html  binutils.html  gprof.html  ld.html  ldint.html
tools/share/info/: annotate.info  as.info  bfd.info  binutils.info  cpp.info  cppinternals.info  ctf-spec.info  gcc.info  gccinstall.info  gccint.info  gdb.info  gfortran.info  gprof.info  ld.info  ldint.info  porting.info  sframe-spec.info  stabs.info
(+2715 files in other folders)
